--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "merziIonic",
+  "name": "ionic_electron_boilerplate",
   "version": "0.0.1",
   "main": "main.js",
   "author": "Ionic Framework",
@@ -10,10 +10,10 @@
     "build": "ionic-app-scripts build",
     "serve": "ionic-app-scripts serve",
     "build:android": "ionic cordova build android",
-    "build:windows": "",
-    "serve:windows": "electron .",
-    "build:ios": "ionic cordova build ios",
-    "serve:ios": "npm run build:ios && ionic cordova run ios --target=\"iPad-Air-2\""
+    "serve:windows": "ionic-app-scripts build && electron .",
+    "build:windows": "ionic-app-scripts build --prod --base-href=\"./\" && electron-packager . --platform=win32",
+    "serve:ios": "ionic cordova build ios && ionic cordova run ios --target=\"iPad-Air-2\"",
+    "build:ios": "ionic cordova build ios --prod"
   },
   "dependencies": {
     "@angular/animations": "5.2.10",
@@ -49,7 +49,7 @@
   "devDependencies": {
     "@ionic/app-scripts": "3.1.9",
     "electron": "^1.8.6",
-    "electron-builder": "^20.10.0",
+    "electron-builder": "^20.13.3",
     "foreman": "^2.0.0",
     "typescript": "~2.6.2"
   },
